# machinable

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CNAME  LICENSE.txt  README.md  README.rst  ThirdPartyNotices.txt  comparison.html  docs-requirements.txt  hashmap.json  idea.html  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  widget-sdk.css  widget-sdk.js
.github/: dependabot.yml
.github/workflows/: build.yml  check-build.yml  codeql-analysis.yml  docs.yml  integrations.yml  publish-to-pypi.yml
about/: approach.html
assets/: 404.0681d6ce.js  404.07167606.js  404.0b571a01.js  404.12926e87.js  404.17fcc90b.js  404.1939b8c4.js  404.1b34b8de.js  404.3c4ce98e.js  404.41bd63ed.js  404.4ff63bc8.js  404.55c56dca.js  404.56851ac7.js  404.56c8f58c.js  404.5a8171ac.js  404.5e43caad.js  404.63869332.js  404.6de54d0c.js  404.6e2790ad.js  404.73c32ac4.js  404.8aeb653f.js  404.94ffa373.js  404.9b56e68e.js  404.a1ef992a.js  404.ac303d7d.js  404.b1d88c7b.js  404.c8b8b273.js  404.d4cda4c1.js  404.f275413b.js  404.f2930eb9.js  404.html.0186537c.js  404.html.0cb678a1.js  404.html.0e1a7e9a.js  404.html.0ec1a54b.js  404.html.14e1ec3f.js  404.html.1b0683ad.js  404.html.1e86d0fa.js  404.html.213964b3.js  404.html.23a667f6.js  404.html.284edbf6.js  404.html.2a4dadaa.js  (+3680 more)
assets/chunks/: @localSearchIndexroot.-CnE68kF.js  @localSearchIndexroot.BTKe7zqp.js  @localSearchIndexroot.BWnsXlY_.js  @localSearchIndexroot.Buxtsha9.js  @localSearchIndexroot.BvszZ9Wu.js  @localSearchIndexroot.C--zK9Rv.js  @localSearchIndexroot.C9h--1DE.js  @localSearchIndexroot.CG3sVV0-.js  @localSearchIndexroot.CPHWlf4i.js  @localSearchIndexroot.CdvhhTHm.js  @localSearchIndexroot.CuoJ0CaR.js  @localSearchIndexroot.CwonRz0C.js  @localSearchIndexroot.KFhh1-uJ.js  @localSearchIndexroot.PzZBHuSZ.js  @localSearchIndexroot.Wih9zNEs.js  @localSearchIndexroot.bsoMEw05.js  Pydoc.e1ecbd85.js  Pydoc.f297ae46.js  VPLocalSearchBox.3oD2PSw8.js  VPLocalSearchBox.50YZR1kj.js  VPLocalSearchBox.BL9zqbSN.js  VPLocalSearchBox.BeUpxiB8.js  VPLocalSearchBox.CHNAg-zj.js  VPLocalSearchBox.CXddrpH7.js  VPLocalSearchBox.CmmLqQcC.js  VPLocalSearchBox.CoXXUUFZ.js  VPLocalSearchBox.D-nEU2vi.js  VPLocalSearchBox.D1_fqPEm.js  VPLocalSearchBox.D4q-Y9kb.js  VPLocalSearchBox.DLFF2o1S.js  VPLocalSearchBox.DVJll0pp.js  VPLocalSearchBox.Dric0K1L.js  VPLocalSearchBox.LxX2xqql.js  VPLocalSearchBox.QrmvYdX2.js  framework.3Urx35Pr.js  framework.62020867.js  framework.Nx1zvZTu.js  theme.0oIz86QA.js  theme.240a561e.js  theme.B7s-4Efe.js  (+19 more)
assets/css/: 0.styles.91c4c62a.css
assets/js/: 10.ee7fd35b.js  11.0ab97a65.js  12.a49e8a2c.js  13.59b8c90d.js  14.c9314005.js  15.51cbd027.js  16.21a07bbd.js  17.be543a97.js  18.0e39331b.js  19.7d1d58a1.js  2.4a0d70b7.js  20.b1330cf9.js  21.4649f72f.js  22.d12ef861.js  23.6c44098c.js  24.3cb49fe5.js  25.74366bf3.js  26.b6c28424.js  27.3a733010.js  28.bbc5ce0c.js  29.aad89a20.js  3.014482c3.js  30.c09da2ba.js  31.9eb9f9b6.js  32.10639d1e.js  33.18c68fbb.js  34.351c3556.js  35.150e0bdc.js  36.a9e39a68.js  37.6155e06a.js  38.9b430043.js  39.4b38288c.js  4.2444cf73.js  40.990f3415.js  41.1daf347d.js  42.ceabc7d4.js  5.7253180e.js  6.d8e51322.js  8.e0616c20.js  9.0256d5da.js  (+1 more)
design/: decisions.html  format.html  identity.html  inference.html  philosophy.html  provenance.html  storage.html
docs/: Makefile  README.md  comparison.md  conf.py  home.data.mts  idea.md  index.md  index.rst  package-lock.json  package.json
docs/.vitepress/: config.js  config.mjs  copysdk.mjs  integrationsgen.py  pydocgen.py
docs/.vuepress/: config.js  config.ts  enhanceApp.js
docs/about/: approach.md
docs/design/: decisions.md  format.md  identity.md  inference.md  philosophy.md  provenance.md  storage.md
docs/examples/: index.md  overview.md
docs/faq/: README.md
docs/guide/: README.md  cli.md  (+40 more)
examples/: aim-ui-storage.html  checkpointing.html  execution.html  index.html  overview.html  slurm-dependencies.html
faq/: index.html
guide/: advanced-configuration.html  advanced-execution.html  cli.html  collections.html  component.html  components.html  composition.html  configuration.html  element.html  engines.html  execution.html  experiments.html  exporting.html  identity.html  imports.html  index.html  indexes.html  inference.html  installation.html  interface.html  introduction.html  machinable-yaml.html  mixins.html  projects.html  provenance.html  putting-it-all-together.html  quick-start.html  quickstart.html  relations.html  results.html  server.html  storage.html  submission.html  versions.html  webclient.html  widgets.html
integrations/: README.md  dmosopt.html  globus.html  index.html  mpi.html  require.html  slurm.html
mcp/: authoring.html  overview.html  reference-inferences.html  setup.html  workflow.html
miscellaneous/: app.html  best-practice.html  comparison.html  contribution-guide.html  design-principles.html  glossary.html  migration-guide.html
reference/: cli.html  component.html  engine.html  execution.html  experiment.html  index.html  indexes.html  machinable_yaml.html  overview.html  registration.html  settings.html  storage.html  submission.html
tests/: collection_test.py  config_interface_test.py  config_loader_test.py  config_mapping_test.py  config_method_test.py  config_parser_test.py  config_test.py  config_versions_test.py  conftest.py  core_component_test.py  core_mixins_test.py  driver_test.py  engine_test.py  events_test.py  functional_api_test.py  helpers.py  observer_test.py  project_manager_test.py  project_test.py  task_test.py  test_api.py  test_api_followups.py  test_api_isolation.py  test_api_source.py  test_api_widgets.py  test_cli.py  test_collection.py  test_component.py  test_config.py  test_config_identity.py  test_connections.py  test_console.py  test_container.py  test_corpus.py  test_dispatch.py  test_docs.py  test_element.py  test_end_to_end.py  test_engine.py  test_execution.py  (+30 more)
tutorial/: installation.html  introduction.html
(+697 files in other folders)
