[tool.poetry]
name = "machinable"
version = "4.6.1"
description = "A modular configuration system for research projects"
license = "MIT"
authors = [
    "Frithjof Gressmann <hello@machinable.org>"
]
maintainers = [
    "Frithjof Gressmann <hello@machinable.org>"
]
readme = "README.md"
homepage = "https://machinable.org"
repository = "https://github.com/machinable-org/machinable"
documentation = "https://machinable.org"
keywords = ["machine-learning", "research"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research"
]
include = ["CHANGELOG.md", "src/machinable/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
flatten-dict = "^0.4"
jsonlines = ">=3.1,<5.0"
pydantic = ">=1,<3"
arrow = "^1.2"
importlib-metadata = {version = "^6.7", python = "<3.8"}
omegaconf = "^2.3.0"
dill = "^0.3.7"
typing-extensions = {version = "^4.7.0", python = "<3.11"}
uuid7 = "^0.1.0"


[tool.poetry.dev-dependencies]
isort = "^5.11.5"
pyupgrade = "^3.3"
black = "^23.10.0"
pytest = "^7.4"
pre-commit = "^3.5.0"
editorconfig-checker = "^2.7.3"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
all = [
  "numpy",
  "pandas",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
machinable = "machinable.cli:main"

[tool.black]
# https://github.com/psf/black
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist'
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.'MESSAGES CONTROL']
disable = "protected-access, import-outside-toplevel, too-few-public-methods"
