[project]
name = "machinable"
version = "4.10.6"
description = "A modular configuration system for research projects"
license = "MIT"
authors = [{ name = "Frithjof Gressmann", email = "hello@machinable.org" }]
maintainers = [{ name = "Frithjof Gressmann", email = "hello@machinable.org" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["machine-learning", "research"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "flatten-dict>=0.4,<1",
  "jsonlines>=3.1,<5.0",
  "pydantic>=1,<3",
  "arrow>=1.3,<2",
  "omegaconf==2.4.0.dev10",
  "dill>=0.3.9,<1",
  "uuid7>=0.1.0,<1",
]

[project.optional-dependencies]
all = ["numpy", "pandas"]

[project.scripts]
machinable = "machinable.cli:main"

[project.urls]
Homepage = "https://machinable.org"
Repository = "https://github.com/machinable-org/machinable"
Documentation = "https://machinable.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/machinable"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.4",
  "pytest>=7.4",
  "pre-commit>=3.5.0",
  "editorconfig-checker>=2.7.3",
  "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"docs/examples/**" = ["UP007", "UP045", "E722", "F811"]
"src/machinable/interface.py" = ["E722"]
"src/machinable/utils.py" = ["E402"]
"tests/test_index.py" = ["F811"]

[tool.ruff.lint.isort]
known-first-party = ["machinable"]

[tool.pylint.'MESSAGES CONTROL']
disable = "protected-access, import-outside-toplevel, too-few-public-methods"
