[project]
name = "machinable"
version = "5.0.0"
description = "A modular configuration system for research projects"
license = "MIT"
authors = [{ name = "Frithjof Gressmann", email = "hello@machinable.org" }]
maintainers = [{ name = "Frithjof Gressmann", email = "hello@machinable.org" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["machine-learning", "research"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "flatten-dict>=0.5,<1",
  "pydantic>=1,<3",
  "arrow>=1.4.0",
  "omegaconf==2.4.0.dev12",
  "dill>=0.4.1",
  "cloudpickle>=3",
]

[project.optional-dependencies]
all = ["numpy", "pandas"]
mcp = ["fastmcp>=2", "scipy", "numpy", "pandas"]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "textual>=1.0",
    "httpx>=0.27",
    "aiofiles>=23",
]
widgets = ["anywidget>=0.9"]

[project.scripts]
machinable = "machinable.cli:main"

[project.urls]
Homepage = "https://machinable.org"
Repository = "https://github.com/machinable-org/machinable"
Documentation = "https://machinable.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/machinable"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=8.1",
    "pre-commit>=4.6.0",
    "httpx>=0.28.1",
    "aiofiles>=23",
    "anywidget>=0.9",
    "pandas>=2.0",
    "ty==0.0.56",
]

[tool.ty.src]
include = ["src/machinable"]
# agent-facing templates that reference project modules by convention;
# not part of the typed surface
exclude = ["src/machinable/mcp/teaching"]

[tool.pytest.ini_options]
# integrations/ is community-maintained and runs in its own workflow
testpaths = ["tests"]

[tool.ruff]
# community-maintained, checked by the integrations workflow instead
extend-exclude = ["integrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
# magic methods, nested Config classes, and __init__ are self-describing
ignore = ["D105", "D106", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# docstring style applies everywhere; presence (D1) only where the backfill is
# complete — remove entries below as their public members get documented
"src/machinable/api/**" = ["D1"]
"src/machinable/mcp/**" = ["D1"]
# tests, docs, and scripts document themselves through their names
"tests/**" = ["D"]
"docs/**" = ["D"]
# emits markdown/CSS templates whose lines cannot wrap
"docs/.vitepress/integrationsgen.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["machinable"]

[tool.pylint.'MESSAGES CONTROL']
disable = "protected-access, import-outside-toplevel, too-few-public-methods"
